--- a/app/_components/_styles/friends-section.module.css
+++ b/app/_components/_styles/friends-section.module.css
@@ -32,7 +32,7 @@
   }
   
   .title {
-    color: black;
+    color: #333;
     font-size: 72px;
     font-weight: 700;
     line-height: 1.2;
@@ -52,7 +52,7 @@
   }
   
   .description {
-    color: black;
+    color: #333;
     font-size: 30px;
     font-weight: 400;
     line-height: 1.4;
