--- a/app/products/[productId]/_components/_styles/ProductCard.module.css
+++ b/app/products/[productId]/_components/_styles/ProductCard.module.css
@@ -57,12 +57,6 @@
   }
 
   .content {
-    font-family:
-      "Noto Serif TC",
-      -apple-system,
-      Roboto,
-      Helvetica,
-      sans-serif;
       padding: 8px;
   }
   
@@ -90,10 +84,16 @@
   }
   
   .description {
-    color: #646b6f;
-    margin-top: 11px;
+    color: #697278;
     font-size: 14px;
-    height: 43px;
+    padding: 0px ;
+    margin: 12px 0;
+    display: -webkit-box;
+    -webkit-line-clamp: 2; /* 限制最多顯示2行 */
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    word-break: break-word;
   }
   
   .cardLight .description {
