--- a/app/products/[productId]/_components/_styles/ProductDetail.module.css
+++ b/app/products/[productId]/_components/_styles/ProductDetail.module.css
@@ -54,7 +54,7 @@
     flex-direction: column;
     justify-content: start;
     align-items: start;
-    padding: 10px 30px;
+    padding: 0px 30px;
     margin-left: 10px;
     overflow: hidden;
     width: 50%;
@@ -73,7 +73,7 @@
   }
 
   .dividerOne {
-    border: 1px solid rgb(189, 191, 195);
+    border: 1px solid #333;
     width: 100%;
     min-height: 1px;
     margin-top: 5px;
@@ -86,19 +86,26 @@
   }
   
   .productDescription {
-    color: #6c7273;
+    color: #333;
     /* flex: 1; */
     width: 492px;
     font-size: 16px;
     margin:0;
-    padding: 15px 0;
+    padding: 12px 0;
     height: 150px;
+    text-align:justify;
   }
   
   .selectionContainer,.cartActions {
+    display: flex;
     justify-content: start;
+    align-items: center;
     width: 100%;
     margin: auto;
+  }
+
+  .selectionContainer{
+    margin: 0;
   }
   
   .quantityWrapper{
@@ -151,6 +158,7 @@
     width: 40%;
     height: 30px;
     border: 1px solid #6c7273;
+    border-radius: 5px;
   }
   
   .quantityButton {
@@ -162,6 +170,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    border-radius: 1px;
+    font-size: 18px;
   }
 
   .quantityValue{
@@ -184,6 +194,7 @@
     padding: 5px 20px;
     cursor: pointer;
     height: 40px;
+    border-radius: 3px;
   }
 
   .cartActions{
@@ -195,7 +206,7 @@
   
   .relatedTitle {
     width: 80%;
-    margin: 10px auto 5px auto;
+    margin: 50px auto 5px auto;
     font-size: 36px;
     padding-left: 15px;
   }
@@ -221,7 +232,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    margin-top: 15px;
+    margin-top: 10px;
     font-size: 18px;
     font-weight: bold;
     color: #413f3c;
@@ -237,6 +248,7 @@
     text-align: center;
     font-size: 16px;
     margin-top: 5px;
+    border-radius: 5px;
   }
 
   .rating {
