--- a/app/carts/_components/_styles/order-summary.module.css
+++ b/app/carts/_components/_styles/order-summary.module.css
@@ -80,7 +80,7 @@
     cursor: pointer;
     transform: skew(-35deg);
     background-color: #eb854a;
-    border: none;
+    border: 1px solid #ef8e49;
     border-radius: 3px;
     align-self: stretch;
     gap: 8px;
@@ -89,41 +89,116 @@
     font-size: 18px;
     font-weight: 500;
     line-height: 32px;
-  }
+}
 
-  .checkoutButton span {
+.checkoutButton span {
     display: inline-block;
     transform: skew(35deg); /* 讓文字回正 */
-  }
-  
-  @media (width<=991px) {
+}
+
+/* Star animation styles */
+.star-1, .star-2, .star-3, .star-4, .star-5, .star-6 {
+    position: absolute;
+    filter: drop-shadow(0 0 0 #fffdef);
+    z-index: -5;
+    transition: all 1s cubic-bezier(0.05, 0.83, 0.43, 0.96);
+}
+
+.star-1 { top: 20%; left: 20%; width: 25px; }
+.star-2 { top: 45%; left: 45%; width: 15px; }
+.star-3 { top: 40%; left: 40%; width: 5px; }
+.star-4 { top: 20%; left: 40%; width: 8px; }
+.star-5 { top: 25%; left: 45%; width: 15px; }
+.star-6 { top: 5%; left: 50%; width: 5px; }
+
+.checkoutButton:hover {
+    background: transparent;
+    color: #fec195;
+    box-shadow: 0 0 25px #fec1958c;
+}
+
+.checkoutButton:hover .star-1 {
+    top: -80%;
+    left: -30%;
+    width: 25px;
+    filter: drop-shadow(0 0 10px #fffdef);
+    z-index: 2;
+}
+
+.checkoutButton:hover .star-2 {
+    top: -25%;
+    left: 10%;
+    width: 15px;
+    filter: drop-shadow(0 0 10px #fffdef);
+    z-index: 2;
+}
+
+.checkoutButton:hover .star-3 {
+    top: 55%;
+    left: 25%;
+    width: 5px;
+    filter: drop-shadow(0 0 10px #fffdef);
+    z-index: 2;
+}
+
+.checkoutButton:hover .star-4 {
+    top: 30%;
+    left: 80%;
+    width: 8px;
+    filter: drop-shadow(0 0 10px #fffdef);
+    z-index: 2;
+}
+
+.checkoutButton:hover .star-5 {
+    top: 25%;
+    left: 115%;
+    width: 15px;
+    filter: drop-shadow(0 0 10px #fffdef);
+    z-index: 2;
+}
+
+.checkoutButton:hover .star-6 {
+    top: 5%;
+    left: 60%;
+    width: 5px;
+    filter: drop-shadow(0 0 10px #fffdef);
+    z-index: 2;
+}
+
+.fil0 {
+    fill: #fffdef;
+}
+
+/* Media queries */
+@media (width <= 991px) {
     .summaryContainer {
-      max-width: 100%;
+        max-width: 100%;
     }
-  
+
     .detailsSection {
-      max-width: 100%;
+        max-width: 100%;
     }
-  
+
     .totalsSection {
-      max-width: 100%;
+        max-width: 100%;
     }
-  
+
     .checkoutButton {
-      margin-top: 40px;
-      padding: 10px 20px;
+        margin-top: 40px;
+        padding: 10px 20px;
     }
-  }
-  
-  @media (width<=640px) {
+}
+
+@media (width <= 640px) {
     .summaryContainer {
-      width: 100%;
+        width: 100%;
     }
-  
+
     .checkoutButton {
-      width: 100%;
+        width: 100%;
     }
-  }
+}
+
 
   /* OrderTotals CSS */
   .totalsContainer {
