--- a/app/carts/complete/_components/_style/checkout-progress.module.css
+++ b/app/carts/complete/_components/_style/checkout-progress.module.css
@@ -8,7 +8,7 @@
     gap: 40px;
     width: 100%;
     height: 200px;
-    /* padding: 40px; */
+    margin-top:50px; 
     font-family:
       Noto Sans TC,
       sans-serif;
@@ -28,7 +28,7 @@
     }
   }
   .progressItem {
-    color: #3e41a4;
+    color: #aeaeb1;
     flex-direction: column;
     align-items: center;
     gap: 10px;
