--- a/app/member-center/myfriends/_styles/chatList.module.css
+++ b/app/member-center/myfriends/_styles/chatList.module.css
@@ -51,13 +51,25 @@
   justify-content: flex-start;
   align-items: center;
 }
-.rightection {
+.rightSection {
   width: 7%;
   display: flex;
-  justify-content: flex-start;
-  align-items: flex-start;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   font-size: 12px;
   color: #3333338a;
+  gap: 10px;
+}
+.rightBottomSection{
+  border-radius: 50%;
+  background-color: rgba(255, 0, 0, 0.671);
+  color: #fff;
+  width: 25px;
+  height: 25px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .middlesection {
   width: 85%;
