--- a/app/member-center/carts/_styles/OrderHistoryPage.module.css
+++ b/app/member-center/carts/_styles/OrderHistoryPage.module.css
@@ -87,3 +87,31 @@
       transform: translateY(0);
     }
   }
+
+  .filterButtons {
+    margin: 1rem 0;
+    display: flex;
+    gap: 1rem;
+  }
+  
+  .filterButton {
+    padding: 0.5rem 1rem;
+    border: 1px solid #ccc;
+    background-color: white;
+    border-radius: 3px;
+    cursor: pointer;
+    font-weight: 500;
+    transition: all 0.2s ease;
+  }
+  
+  .filterButton:hover {
+    background-color: #f4f4f4;
+    color:gray ;
+  }
+  
+  .active {
+    background-color: #ff6600;
+    color: white;
+    border-color: #ff6600;
+  }
+  
