--- a/app/_components/_styles/ImageLinkGallery.css
+++ b/app/_components/_styles/ImageLinkGallery.css
@@ -15,12 +15,12 @@
   
   .gallery-gradient-left {
     left: 0;
-    background: linear-gradient(to left, rgba(0, 0, 0, 0) 0%, #060606 100%);
+    /* background: linear-gradient(to left, rgba(0, 0, 0, 0) 0%, #060606 100%); */
   }
   
   .gallery-gradient-right {
     right: 0;
-    background: linear-gradient(to right, rgba(0, 0, 0, 0) 0%, #060606 100%);
+    /* background: linear-gradient(to right, rgba(0, 0, 0, 0) 0%, #060606 100%); */
   }
   
   .gallery-content {
@@ -58,7 +58,7 @@
     height: 170px;
     width: 210px;
     border-radius: 15px;
-    border: 3px solid #fff;
+    /* border: 3px solid #a09d9d; */
     object-fit: cover;
     transition: 0.3s ease;
   }
@@ -99,6 +99,12 @@
     height: 4px;
     background: linear-gradient(45deg, #931b00, #E76317);
     border-radius: 2px;
+  }
+
+  .gallery-title{
+    color: #333;
+    margin-top: 10px;
+    font-family: inherit;
   }
   
   @media (max-width: 768px) {
