--- a/app/member-center/_styles/member-layout.module.css
+++ b/app/member-center/_styles/member-layout.module.css
@@ -4,14 +4,87 @@
   justify-content: center;
   min-height: 100vh;
   padding: 70px 20px;
-  min-height: 100vh;
 }
 .centerSidebar {
-  width: 20%;
+  width: 22%;
   min-height: 100vh;
 }
 .centerList {
   width: 70%;
   min-height: 100vh;
   padding: 20px 50px;
+}
+
+@media (max-width: 768px) {
+  .centerLayout {
+    background-color: #f4f4f4;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    padding: 70px 20px;
+    min-height: 100vh;
+  }
+  .centerSidebar {
+    position: relative;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    min-height: 0vh;
+  }
+  .centerList {
+    width: 100%;
+  }
+}
+
+@media (max-width: 500px) {
+  .selectBtn {
+    display: block;
+  }
+  .personList {
+    justify-content: center;
+  }
+}
+@media (max-width: 480px) {
+  .centerLayout {
+    background-color: #f4f4f4;
+    display: flex;
+    justify-content: center;
+    min-height: 100vh;
+    padding: 30px 20px;
+    min-height: 100vh;
+  }
+  .centerList {
+    min-height: 100vh;
+    padding: 20px 50px;
+  }
+}
+@media (max-width: 420) {
+  .memberNoAdmin {
+    width: 100%;
+  }
+  .memberNoAdmin .memberSpan {
+    width: 100%;
+  }
+  .memberBtns {
+    flex-wrap: wrap;
+    justify-content: center;
+    width: 350px;
+  }
+  .memberBtn {
+    width: 80%;
+    margin: 0px 10px;
+    margin-bottom: 20px;
+    padding: 8px 18px;
+    text-align: center;
+    border-radius: 3px;
+    background-color: #f87808;
+    color: #fff;
+    font-size: 18px;
+  }
+  .memberBtnRegister {
+    background: #353535;
+  }
 }
