--- a/app/products/[productId]/_components/_styles/breadcrumb.module.css
+++ b/app/products/[productId]/_components/_styles/breadcrumb.module.css
@@ -62,15 +62,16 @@
   @media (width <= 960px) {
   .breadcrumbContainer{
     width: 100%;
-    margin: 0;
+    margin-top: 50px;
+    margin-bottom: 0;
   }
 
 }
 
 @media (width <= 390px) {
   .breadcrumbContainer{
+    margin-top: 100px;
     width: 100%;
-    margin: 0;
   }
   .breadcrumbItem a{
     font-size: 16px;
