--- a/app/videos/components/_styles/video-Card.module.css
+++ b/app/videos/components/_styles/video-Card.module.css
@@ -8,6 +8,7 @@
     overflow: hidden;
     box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.5);
     border-radius: 3px;
+    transition: all 0.3s ease;
   }
 
   .card:hover {
