--- a/app/member/_styles/add-profile.module.css
+++ b/app/member/_styles/add-profile.module.css
@@ -12,8 +12,10 @@
   display: flex;
   justify-content: center;
   margin-top: 50px;
-  border: 1px solid #0b3760;
+  margin-bottom: 50px;
+  border: 1px solid #ddd;
   border-radius: 3px;
+  box-shadow: 1px 1px 5px #ddd;
 }
 .form form {
   display: flex;
@@ -43,12 +45,14 @@
   padding: 10px;
   margin: 0px auto;
   background: transparent;
-  border: 1px solid #0b3760;
+  border: 1px solid #f8780846;
   border-radius: 3px;
 }
 .formGroup input:focus {
   outline: none;
-  border: 1px solid #db6318;
+  background: #fbe8d7;
+  box-shadow: inset 1px 2px 8px #f4b075d1;
+  transition: all 0.3s ease-in-out;
 }
 
 /* avatar */
@@ -93,19 +97,20 @@
   width: 10px;
   height: 10px;
   margin: 0px 20x;
-  border: 1px solid #0b3760;
+  border: 1px solid #2f2f2f;
   border-radius: 3px;
 }
 .radioItem input:checked::before {
   content: '';
   width: 12px;
   height: 12px;
-  background-color: #db6318; /* 內圈變橘色 */
+  background-color: #f87808; /* 內圈變橘色 */
   border-radius: 3px;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  transition: all 0.3s ease-in-out;
 }
 
 /* goal checkbox */
@@ -123,14 +128,22 @@
   align-items: center;
   justify-content: center;
   padding: 5px 15px;
-  border: 1px solid #0b3760;
+  border: 1px solid #f8780846;
   border-radius: 3px;
   margin-right: 10px;
+  transition: all 0.3s ease-in-out;
+}
+.current label:hover {
+  box-shadow: 1px 2px 8px #f87808;
+  background: #f87808;
+  color: #fff;
+  transition: all 0.3s ease-in-out;
 }
 .current input:checked + label {
-  background-color: #db6318;
+  background-color: #f87808;
   color: #fff;
-  border: 1px solid #db6318;
+  border: 1px solid #f87808;
+  transition: all 0.3s ease-in-out;
 }
 
 /* public switch */
@@ -147,7 +160,7 @@
   width: 40px;
   height: 20px;
   margin: 4px 10px 0px 20px;
-  background: #db6318;
+  background: #f87808;
   display: inline-block;
   border-radius: 100px;
   position: relative;
@@ -163,7 +176,7 @@
   transition: transform 0.3s, left 0.3s; /* 確保兩個屬性都能順利過渡 */
 }
 .status input:not(:checked) + label {
-  background: #0b3760;
+  background: #2f2f2f;
 }
 .status input:not(:checked) + label .switchBtn {
   left: 2px;
@@ -173,9 +186,17 @@
   padding: 8px 18px;
   text-align: center;
   border-radius: 3px;
-  background: #0b3760;
+  background: #f87808;
+  border: 1px solid transparent;
   color: #fff;
   font-size: 18px;
+}
+.btn:hover {
+  box-shadow: 0px 0px 8px #f87808;
+  background: #f87808;
+  color: #fff;
+  transition: all 0.3s ease-in-out;
+  cursor: pointer;
 }
 /* 同loginBtn樣式 */
 
@@ -187,17 +208,19 @@
   padding: 10px;
   margin: 0px auto;
   background: transparent;
-  border: 1px solid #0b3760;
+  border: 1px solid #f8780846;
   border-radius: 3px;
 }
 .intro:focus {
   outline: none;
-  border: 1px solid #db6318;
+  background: #fbe8d7;
+  box-shadow: inset 1px 2px 8px #f4b075d1;
+  transition: all 0.3s ease-in-out;
 }
 .textDanger {
   margin-left: 15px;
   display: flex;
   justify-content: flex-start;
-  color: red;
+  color: #f87808;
   font-size: 12px;
 }
