--- a/app/member-center/myfriends/_styles/chatLayout.module.css
+++ b/app/member-center/myfriends/_styles/chatLayout.module.css
@@ -7,7 +7,7 @@
   margin-bottom: 30px;
 }
 .sidebar {
-  min-width: 7%;
+  min-width: 65px;
   min-height: 600px;
   height: 100%;
   background-color: #333;
