--- a/app/member-center/myfriends/_styles/chatList.module.css
+++ b/app/member-center/myfriends/_styles/chatList.module.css
@@ -1,4 +1,5 @@
 .friendsPage {
+  min-height: 600px;
   height: 100%;
   width: 100%;
   padding: 20px;
@@ -46,6 +47,7 @@
   padding: 0;
 }
 .leftsection {
+  min-width: 45px;
   width: 5%;
   display: flex;
   justify-content: flex-start;
