--- a/app/member-center/myfriends/_styles/chatList.module.css
+++ b/app/member-center/myfriends/_styles/chatList.module.css
@@ -103,3 +103,19 @@
   padding: 5px 0px;
   border-radius: 3px;
 }
+@media (max-width: 420){
+  .middlesection{
+    width: 60%;
+  }
+  .content{
+    width: 90%;
+    overflow: hidden;
+    white-space: nowrap; 
+    text-overflow: ellipsis;
+  }
+  .rightSection{
+    width: 8%;
+    font-size: 10px;
+    margin-right: 10px;
+  }
+}
