--- a/app/_components/_styles/drawer.module.css
+++ b/app/_components/_styles/drawer.module.css
@@ -70,9 +70,10 @@
     margin: auto;
     height: 80px;
     display: flex;
-    /* justify-content: center; */
-    align-items: end;
+    justify-content: flex-start;
+    line-height: 80px;
     transition: background-color 0.3s ease;
+    cursor: pointer;
 }
 
 .navList li:hover {
