--- a/app/videos/components/_styles/video-Card.module.css
+++ b/app/videos/components/_styles/video-Card.module.css
@@ -174,7 +174,7 @@
   position: relative;
   width: 60%;
   max-width: 800px;
-  height: 69vh;
+  height: 510px;
   max-height: 80vh;
   background: rgb(33, 31, 30);
   padding: 1rem;
