--- a/app/rental-notice/components/_styles/RentalPage.module.css
+++ b/app/rental-notice/components/_styles/RentalPage.module.css
@@ -10,27 +10,27 @@
   justify-content: end;
   align-items: center;
   gap: 18px;
-  max-width: 1440px;
+  max-width: 1200px;
   padding: 20px 120px;
   display: flex;
   position: relative;
   margin: auto;
+
 }
 
 .noticeContainer {
-  background-color: rgba(239, 244, 247, 0.9);
+  background-color: #f7f5f4e9;
   /* border: 15px solid #000; */
-  width: 80%;
+  width: 100%;
   margin-left: 20%;
-  margin-top: 5%;
-  margin-bottom: 5%;
+
   padding: 10px 70px;
-  font-family: "Noto Serif TC";
   font-weight: 700;
   position: relative;
   overflow: hidden;
   box-shadow: 0 10px 10px rgba(0, 0, 0, 0.25);
   z-index: 1;
+  border-radius: 80px 0px 80px 0px;
 }
 
 .noticeGrid {
@@ -60,7 +60,7 @@
 }
 
 .noticeTitle {
-  color: #0b3760;
+  color: #333;
   font-size: 20px;
   margin-bottom: 8px;
 }
@@ -73,17 +73,15 @@
 
 .noticeSidebar {
   position: absolute;
-  /* bottom: 10%; */
-  left: 10%;
+  left: 4%;
   background-color: #fff;
   border: 6px solid #000;
-  width: 23%;
-  padding: 20px;
+  width: 25%;
+  padding: 23px;
   z-index: 1;
 }
 
 .sidebarTitle {
-  font-family:"Lexend", "Noto Serif TC", Helvetica, sans-serif;
   font-size: 50px;
   font-weight: 800;
   color: #323943;
@@ -166,7 +164,6 @@
 .equipmentTitle {
   position: absolute;
   color: #fff;
-  font-family: "Noto Serif TC", -apple-system, Roboto, Helvetica, sans-serif;
   font-size: 36px;
   font-weight: 600;
   padding: 10px 35px;
@@ -190,7 +187,6 @@
   width: 100%;
   min-height: 720px;
   padding: 60px 0;
-  font-family: "Noto Serif TC", -apple-system, Roboto, Helvetica, sans-serif;
   position: relative;
 }
 
@@ -257,4 +253,51 @@
   font-weight: 900;
   text-align: center;
   padding: 10px;
+}
+
+.modalOverlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+.modalContent {
+  /* background-image: url('/img/notice.jpg');  
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat; */
+  border-radius: 10px;
+  position: relative;
+  max-width: 100%;
+  max-height: 100vh;
+  overflow-y: auto;
+  overflow-x: auto;
+}
+
+/* .modalContent::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(50, 46, 46, 0.6);
+  border-radius: 10px;
+} */
+
+.closeButton {
+  position: absolute;
+  background: none;
+  border: none;
+  font-size: 36px;
+  cursor: pointer;
+  color: #f4f2f1;
+  z-index: 2;
 }
