--- a/app/member-center/_styles/member.module.css
+++ b/app/member-center/_styles/member.module.css
@@ -4,6 +4,7 @@
   width: 100%;
   align-items: center;
   margin: 0 15px;
+  margin-top: 25px;
   display: block;
   flex-direction: column;
   transition: width 0.3s ease, height 0.3s ease;
@@ -361,7 +362,6 @@
 @media (max-width: 1440) {
 }
 @media (max-width: 1390px) {
-
 }
 @media (max-width: 1140px) {
   .selectArea {
@@ -395,6 +395,20 @@
     margin-left: 5px;
   }
 }
+@media (max-width: 1220px) {
+  .welcome {
+    width: 100%;
+    height: 60px;
+    font-size: 18px;
+    text-align: center;
+    line-height: 60px;
+    color: #666;
+    padding: 0px;
+    display: flex;
+    align-items: center;
+    margin: auto;
+  }
+}
 @media (max-width: 768px) {
   .selectArea {
     position: absolute;
@@ -403,6 +417,7 @@
     flex-direction: column;
     align-items: center;
     width: 90vw;
+    margin-top: 10px;
     transition: height 0.3s ease-in-out;
   }
   .selectPart {
@@ -423,17 +438,7 @@
     margin: auto;
   }
   .welcome {
-    width: 100%;
-    height: 60px;
-    font-size: 18px;
-    text-align: center;
-    line-height: 60px;
-    color: #666;
-    padding: 0px;
-    display: flex;
     justify-content: flex-start;
-    align-items: center;
-    margin: auto;
   }
   .welcomeText span {
     line-height: 30px;
@@ -456,11 +461,10 @@
     padding: 10px;
   }
 }
-@media (max-width: 500px) {
-
-}
-@media (max-width: 480px) {
- 
+@media (max-width: 480) {
+  .memberAdmin p {
+    font-size: 20px;
+  }
 }
 @media (max-width: 420) {
   .memberNoAdmin {
@@ -489,5 +493,9 @@
     background: #353535;
   }
 }
-
+@media (max-width:320) {
+  .memberAdmin p {
+    font-size: 18px;
+  }
+}
 /* #region ================= RWD====================== */
