--- a/app/member-center/articles/article-default.module.css
+++ b/app/member-center/articles/article-default.module.css
@@ -5,7 +5,7 @@
     display: flex;
     flex-direction: column;
     gap: 25px;
-    justify-content: center;
+    margin-top: 100px;
     align-items: center;
   }
   .noFavArticle p {
