--- a/app/member-center/articles/articleList.module.css
+++ b/app/member-center/articles/articleList.module.css
@@ -73,6 +73,12 @@
 /* #endregion ================= Pagination  End ====================== */
 
 /* #region ================= FavCard====================== */
+.articleList{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  min-height: 100vh;
+}
 .favCard {
   display: flex;
   width: 100%;
@@ -92,28 +98,37 @@
   object-position: cover;
 }
 .images img {
-  width: 100%;
   height: 100%;
-  object-fit: cover;
 }
 .content {
   display: flex;
   justify-content: space-between;
   align-items: center;
   line-height: 1.5;
-  width: 75%;
+  padding: 20px 0;
+}
+.content h3 {
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
 }
 .cardBody {
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
-  width: 80%;
+  width: 100%;
   height: 100%;
   padding: 0px 30px;
 }
 .cardDesc {
-  width: 80%;
+  width: 90%;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
 }
+
 .favCard button {
   margin: auto;
   width: 10%;
@@ -121,10 +136,11 @@
   border-radius: 3px;
   border: transparent;
   color: #fff;
-  background-color: #db6318;
+  background-color: #f87808;
   box-shadow: 1px 1px 3px #5f534bd4;
 }
 /* #endregion ================= FavCard ====================== */
+
 
 /* #region ================= HeartArea Start ====================== */
 
@@ -152,3 +168,72 @@
   transition: all 0.3s;
 }
 /* #endregion ================= HeartArea end ====================== */
+
+@media (max-width: 1400px) {
+  .images img {
+    width: 200px;
+    height: 100%;
+  }
+}
+@media (max-width: 680px) {
+  .content {
+    height: 100px;
+  }
+  .images img {
+    width: 150px;
+    height: 100%;
+  }
+  .cardBody {
+    padding: 0px 20px;
+  }
+  .content h3 {
+    font-size: 15px;
+    display: -webkit-box;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    margin-bottom: 8px;
+  }
+  .content p {
+    font-size: 12px;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+  }
+  .searchForm input {
+    width: 200px;
+  }
+}
+@media (max-width: 400px) {
+  .images img {
+    width: 100px;
+    height: 100%;
+  }
+  .cardBody {
+    padding: 0px 10px;
+  }
+  .content h3 {
+    font-size: 12px;
+    display: -webkit-box;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+  }
+  .content p {
+    font-size: 10px;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+  }
+  .searchForm input {
+    width: 200px;
+  }
+  .heart {
+    font-size: 16px;
+  }
+  .heartActive {
+    font-size: 16px;
+  }
+}
