--- a/app/articles/styles/articles.module.css
+++ b/app/articles/styles/articles.module.css
@@ -77,6 +77,7 @@
   color: #f87808;
   font-weight: 600;
 }
+
 /* #endregion ================= Breadcrumb ====================== */
 
 .articlesContainer {
@@ -432,7 +433,8 @@
     justify-content: center;
   }
 }
-@media (max-width: 420) {
+@media (max-width: 420px) {
+  
   .banner {
     background-image: url('/imgs/article/banner/articlebanner420.jpg');
   }
@@ -443,6 +445,13 @@
   .searchForm input {
     width: 200px;
    
+  }
+  .breadcrumbItem.active a:last-child{
+    width: 150px;
+    display: -webkit-box;
+    -webkit-line-clamp: 1; 
+    -webkit-box-orient: vertical;
+    overflow: hidden;
   }
 }
 /* #endregion ================= RWD END ====================== */
