文章沒有收藏RWD調整

--- a/app/member-center/articles/article-default.module.css
+++ b/app/member-center/articles/article-default.module.css
@@ -34,3 +34,10 @@
     align-items: flex-start;
     margin-top: 50px;
   }
+
+  @media (max-width: 420) {
+    .noFavArticle {
+      width: 100%;
+    }
+    
+  }
