--- a/app/member-center/_styles/member.module.css
+++ b/app/member-center/_styles/member.module.css
@@ -436,6 +436,7 @@
     justify-content: flex-start;
     align-items: center;
     margin: auto;
+    margin-bottom: 20px;
   }
   .welcome {
     justify-content: flex-start;
